--- a/gestor-tareas/style.css
+++ b/gestor-tareas/style.css
@@ -15,7 +15,7 @@ body {
 .board-header{
     background-color: rgb(245, 85, 205);
     color: white;
-    padding: 2rem 3rem;
+    padding: 1rem 1rem;
     text-align: center;
     box-shadow: rgba(134, 47, 105, 0.25) 0px 2px 5px -1px, rgba(71, 67, 67, 0.3) 0px 1px 3px -1px;
 }
@@ -35,7 +35,7 @@ h1{
 .list{
     background-color: white;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     max-height: calc(100vh - 6rem);
@@ -47,8 +47,7 @@ h1{
 
 .list-header {
     font-weight: bold;
-    margin-bottom: 1rem;
-    padding: 1rem 0;
+    padding: 0.5rem;
     cursor: pointer;
     text-align: center;
 }
@@ -75,6 +74,10 @@ h2{
     gap: 2rem;
     flex-direction: column;
     display: flex;
+}
+
+.card-actions{
+    padding: 0.5rem;
 }
 
 button{
@@ -129,3 +132,81 @@ button:hover{
 }
 
 
+/* Formulario */
+.form-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* fondo oscuro */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+/* Contenedor del formulario */
+.formulario-tarea {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    width: 90%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+/* Inputs y labels */
+.formulario-tarea label {
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.formulario-tarea input,
+.formulario-tarea select {
+    padding: 0.5rem;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    width: 100%;
+}
+
+/* Botones */
+.form-botones {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.form-botones button {
+    flex: 1;
+    padding: 0.6rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+}
+
+.form-botones button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.form-botones button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+#cancelar-btn {
+    background-color: #f44336;
+    color: white;
+}
+
+#cancelar-btn:hover {
+    background-color: #d32f2f;
+}
