--- a/gestor-tareas/style.css
+++ b/gestor-tareas/style.css
@@ -50,10 +50,19 @@ h1{
     padding: 0.5rem;
     cursor: pointer;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+span {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color: gainsboro;
+    border-radius: 999px;
 }
 
 h2{
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
 .cards-container{
@@ -78,18 +87,23 @@ h2{
 
 .card-actions{
     padding: 0.5rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
 }
 
 button{
-    height: 2rem;
-    width: 4rem;
+    height: 3rem;
+    width: 5rem;
     border-style: none;
     border-radius: 0.5rem;
     cursor: pointer;
 }
 
 button:hover{
-    background-color: rgba(85, 84, 85, 0.178);
+    border-color: black;
+    border-style: solid;
 }
 
 .edit-card-btn{
@@ -158,6 +172,8 @@ button:hover{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 /* Inputs y labels */
@@ -209,4 +225,62 @@ button:hover{
 
 #cancelar-btn:hover {
     background-color: #d32f2f;
+}
+
+.avatar-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.625rem;
+    margin: 0.625rem 0;
+    justify-content: center;
+}
+
+.avatar-option {
+    flex: 0 0 calc(20% - 0.625rem);
+    display: flex;
+    justify-content: center;
+}
+
+.avatar-option img {
+    width: 3.125rem;  
+    height: 3.125rem;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.avatar-option img:hover {
+    transform: scale(1.1); 
+}
+
+.avatar-option.selected img {
+    outline: 0.1875rem solid #49dfdf;       
+    outline-offset: 0.125rem;               
+    box-shadow: 0 0 0.625rem rgba(76, 175, 175, 0.6); 
+}
+
+.responsable-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 0.5rem;
+    font-weight: 600;
+    font-size: 1rem;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.responsable-info span {
+    flex: 1 1 auto;
+    min-width: 0;
+    word-break: break-word;
+}
+
+.avatar-small {
+    width: 2.8rem;  
+    height: 2.8rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 0.5rem;
+    flex-shrink: 0;
 }
