--- a/gestor-tareas/style.css
+++ b/gestor-tareas/style.css
@@ -174,6 +174,8 @@ button:hover{
     gap: 1rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
+    max-height: 90vh; /* No más del 90% de la pantalla */
+    overflow-y: auto; /* Agrega scroll si se necesita */
 }
 
 /* Inputs y labels */
