--- a/gestor-tareas/style.css
+++ b/gestor-tareas/style.css
@@ -296,9 +296,10 @@ button:hover{
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
+    text-align: center;
     justify-content: space-between;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
     align-items: center;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
